--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htnl lang="eng">
+<html lang="eng">
     <head>
         <title> My codex logo page</title>
         <link rel="stylesheet" href="styles.css">
